--- a/app/renderer/pages/control/index.html
+++ b/app/renderer/pages/control/index.html
@@ -1,3 +1,17 @@
 <html>
-<body>control</body>
+<style>
+    * {
+        margin: 0
+    }
+
+    #screen-video {
+        width: 100%;
+        height: 100%;
+        object-fit: fill
+    }
+</style>
+<body>
+<video id="screen-video"></video>
+<script src="./app.js"></script>
+</body>
 </html>
